src/test/ui/check-static-values-constraints.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/check-static-values-constraints.rs:65:43
   |
LL |                                           ..SafeStruct{field1: SafeEnum::Variant3(WithDtor),
   |  ___________________________________________^
LL | |
LL | |                                                      field2: SafeEnum::Variant1}};
   | |                                                                                ^- value is dropped here
   | |________________________________________________________________________________|
   |                                                                                  statics cannot evaluate destructors

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:79:33
   |
LL | static STATIC11: Box<MyOwned> = box MyOwned;
   |                                 ^^^^^^^^^^^ allocation not allowed in statics

error[E0015]: cannot call non-const fn `<str as ToString>::to_string` in statics
  --> $DIR/check-static-values-constraints.rs:89:38
   |
LL |     field2: SafeEnum::Variant4("str".to_string())
   |                                      ^^^^^^^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:94:5
   |
LL |     box MyOwned,
   |     ^^^^^^^^^^^ allocation not allowed in statics

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:95:5
   |
LL |     box MyOwned,
   |     ^^^^^^^^^^^ allocation not allowed in statics

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:99:6
   |
LL |     &box MyOwned,
   |      ^^^^^^^^^^^ allocation not allowed in statics

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:100:6
   |
LL |     &box MyOwned,
   |      ^^^^^^^^^^^ allocation not allowed in statics

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:106:5
   |
LL |     box 3;
   |     ^^^^^ allocation not allowed in statics

error[E0507]: cannot move out of static item `x`
  --> $DIR/check-static-values-constraints.rs:110:45
   |
LL |     let y = { static x: Box<isize> = box 3; x };
   |                                             ^
   |                                             |
   |                                             move occurs because `x` has type `Box<isize>`, which does not implement the `Copy` trait
   |                                             help: consider borrowing here: `&x`

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:110:38
   |
LL |     let y = { static x: Box<isize> = box 3; x };
   |                                      ^^^^^ allocation not allowed in statics

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0010, E0015, E0493, E0507.
For more information about an error, try `rustc --explain E0010`.
